Made my rocket fly

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +7,12 @@
 </head>
 <body>
 	<h1>Hello js rocket</h1>
-	<a href="#" onclick="sayMyName('Johannes');">CLICK ME</a>
+	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
+
+	<div class="cool" id="cool">
+		<p>Hello I'm cool!</p>
+		
+	</div>
 </body>
 </html>
 
